<resources>
    <string name="app_name">DOuBiCinamaTickit</string>
    <string name="click_here_to_login">点击登录</string>
    <string name="verify">验证</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="find">找回帐号或密码</string>
    <string name="username">手机号/邮箱</string>

    <string name="password">请输入密码</string>

    <string name="hintAuthCode">请输入验证码</string>

    <string name="hintPassword">密码至少6个字符(数字+字母)</string>

    <string name="hintAgainPassword">请再次输入新密码</string>
    <string name="getAuthCode">获取验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="get_sms_code">获取验证码</string>
    <string name="reget_sms_code">重新发送</string>
    <string name="reget_sms_code_countdown">重新发送(%s)</string>
</resources>
