<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liucheng.administrator.doubicinamatickit.module.register.RegisterActivity">



    <include
        android:id="@+id/include_login_title"
        layout="@layout/include_login_title"/>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include_login_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:weightSum="3">

            <EditText
                android:id="@+id/et_register_auth_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="@string/hintAuthCode"
                />

            <Button
                android:id="@+id/ib_register_auth_code"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"

                android:layout_height="42dp"
                android:background="@drawable/shape_get_auth_code_button"
                android:contentDescription="@null"
                android:text="@string/getAuthCode"
                android:textColor="#ffffff"
                android:layout_weight="1"
                />
        </LinearLayout>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:inputType="textPassword" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/et_register_again_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAgainPassword"
            android:inputType="textPassword" />

        <Button

            android:id="@+id/but_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login_button"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/register"
            android:textColor="#ffffff"

            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>
